@@ -145,6 +145,7 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
 * (bug 24650) Fix API to work with categorylinks changes
 * Expose list of skins in meta=siteinfo
 * (bug 26548) Add iiurlparam param to query=imageinfo and query=stashimageinfo
+* (bug 27201) Special:WhatLinksHere output no longer contains duplicate IDs
 
 === Languages updated in 1.18 ===
 
